fix(task-form): Prevent removal of background content when new task form is displayed
In this commit, I resolved an issue where the new task form caused the removal of background content when displayed, resulting in a blurry view of the already added tasks.

- Ensuring that the background content remains visible(blurred) and unchanged when the task form is active.

--- a/src/style.css
+++ b/src/style.css
@@ -153,6 +153,9 @@ html {
 /* ADD TASK FORM*/
 
 .new-task {
+  position: fixed;
+  top: 20%;
+  left: 40%;
   width: 30rem;
   height: 35rem;
   display: flex;
